Updated null check and refactored methods